--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "dynamoose": "^0.8.7",
-    "puppeteer": "^1.5.0"
+    "got": "^8.3.1"
   }
 }
