--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AWSKRUG Serverless Group의 첫번째 핸즈온 Part.2 웹크롤러 만들기입니다.😁",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node handler.test.js"
   },
   "repository": {
     "type": "git",
