--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AWSKRUG Serverless Group의 첫번째 핸즈온 Part.2 웹크롤러 만들기입니다.😁",
   "main": "index.js",
   "scripts": {
-    "test": "node handler.test.js"
+    "test": "node handler.test.js",
+    "deploy": "serverless deploy"
   },
   "repository": {
     "type": "git",
