Add moment dependency

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "homepage": "https://github.com/novemberde/serverless-crawler-demo#readme",
   "devDependencies": {
     "aws-sdk": "^2.263.1",
-    "serverless": "^1.27.3"
+    "serverless": "^1.28.0"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "dynamoose": "^0.8.7",
-    "got": "^8.3.1"
+    "got": "^8.3.1",
+    "moment": "^2.22.2"
   }
 }
